manifests-failed/canton-domain-0.6.1.tgz-manifest.yaml
---
# Source: canton-domain/templates/networkpolicy/from-all-to-sequencer-api-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-release-canton-domain-allow-sequencer-api-metrics
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: sequencer
      canton.io/domain: mydomain
  policyTypes:
  - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 4401
---
# Source: canton-domain/templates/networkpolicy/from-same-namespace-to-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-release-canton-domain-allow-same-namespace
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: canton-domain-0.6.1.tgz
---
# Source: canton-domain/templates/manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-canton-domain-manager
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
    app.kubernetes.io/component: manager
spec:
  type: ClusterIP
  ports:
    - name: admin
      protocol: TCP
      port: 4801
      targetPort: admin
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/component: manager
---
# Source: canton-domain/templates/mediator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-canton-domain-mediator
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
    app.kubernetes.io/component: mediator
spec:
  type: ClusterIP
  ports:
    - name: admin
      protocol: TCP
      port: 4602
      targetPort: admin
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/component: mediator
---
# Source: canton-domain/templates/sequencer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-canton-domain-sequencer
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
    app.kubernetes.io/component: sequencer
spec:
  type: ClusterIP
  ports:
    - name: public
      protocol: TCP
      port: 4401
      targetPort: public
    - name: admin
      protocol: TCP
      port: 4402
      targetPort: admin
  sessionAffinity: "ClientIP"
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/component: sequencer
---
# Source: canton-domain/templates/manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-canton-domain-manager
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
    app.kubernetes.io/component: manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: canton-domain
      app.kubernetes.io/component: manager
  strategy:
    type: "Recreate"
  template:
    metadata:
      annotations:
        "checksum/config": "8852e2172a2285b062030361992c9445d7da57dc83700acfc3db9ac31b3e4acb"
        "checksum/env": "12dc3746da9adf61affcb183b1eb51b62c197e71eaf8b4af8dbfc7adcd437237"
        "checksum/secret": "01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b"
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: canton-domain
        app.kubernetes.io/part-of: canton
        app.kubernetes.io/version: 2.8.1
        canton.io/domain: mydomain
        helm.sh/chart: canton-domain-0.6.1
        app.kubernetes.io/component: manager
    spec:
      serviceAccountName: my-release-canton-domain-manager
      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: Always
        sysctls: []
      containers:
        - name: canton
          image: "digitalasset-docker.jfrog.io/canton-enterprise:2.8.1"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            readOnlyRootFilesystem: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          args:
            - "daemon"
            - "--log-profile=container"
            - "--log-encoder=plain"
            - "--log-level-root=INFO"
            - "--log-level-canton=INFO"
            - "--log-level-stdout=INFO"
            - "--config=/etc/canton/manager.conf"
          ports:
            - name: admin
              containerPort: 4801
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 200m
          livenessProbe:
            grpc:
              port: 4803
              service: "liveness"
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 3
          readinessProbe:
            grpc:
              port: 4803
              service: ""
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
            timeoutSeconds: 3
          volumeMounts:
            - name: config
              mountPath: /etc/canton
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: my-release-canton-domain-manager
---
# Source: canton-domain/templates/mediator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-canton-domain-mediator
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
    app.kubernetes.io/component: mediator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: canton-domain
      app.kubernetes.io/component: mediator
  strategy:
    type: "Recreate"
  template:
    metadata:
      annotations:
        "checksum/config": "e2a5accca611408d3cb8d0c32168c5fc93ef85574b6c07c89a0e1aa49eb83254"
        "checksum/env": "e7d2dddc37effa3ccc77253de1ea4957a213c093d9084818cfc4fac040affcef"
        "checksum/secret": "01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b"
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: canton-domain
        app.kubernetes.io/part-of: canton
        app.kubernetes.io/version: 2.8.1
        canton.io/domain: mydomain
        helm.sh/chart: canton-domain-0.6.1
        app.kubernetes.io/component: mediator
    spec:
      serviceAccountName: my-release-canton-domain-mediator
      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: Always
        sysctls: []
      containers:
        - name: canton
          image: "digitalasset-docker.jfrog.io/canton-enterprise:2.8.1"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            readOnlyRootFilesystem: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          args:
            - "daemon"
            - "--log-profile=container"
            - "--log-encoder=plain"
            - "--log-level-root=INFO"
            - "--log-level-canton=INFO"
            - "--log-level-stdout=INFO"
            - "--config=/etc/canton/mediator.conf"
          ports:
            - name: admin
              containerPort: 4602
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 200m
          livenessProbe:
            grpc:
              port: 4603
              service: "liveness"
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 3
          readinessProbe:
            grpc:
              port: 4603
              service: ""
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
            timeoutSeconds: 3
          volumeMounts:
            - name: config
              mountPath: /etc/canton
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: my-release-canton-domain-mediator
---
# Source: canton-domain/templates/sequencer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-canton-domain-sequencer
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: canton-domain
    app.kubernetes.io/part-of: canton
    app.kubernetes.io/version: 2.8.1
    canton.io/domain: mydomain
    helm.sh/chart: canton-domain-0.6.1
    app.kubernetes.io/component: sequencer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: canton-domain
      app.kubernetes.io/component: sequencer
  template:
    metadata:
      annotations:
        "checksum/config": "064f754c2c262817a6455c37f20d669de76aa58daccc66d7ee761aab7e8fba73"
        "checksum/env": "a2e3b451567372bffb8b3ca9ab07e58546a89ef224c7b776e856d227cfe60b6f"
        "checksum/secret": "01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b"
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: canton-domain
        app.kubernetes.io/part-of: canton
        app.kubernetes.io/version: 2.8.1
        canton.io/domain: mydomain
        helm.sh/chart: canton-domain-0.6.1
        app.kubernetes.io/component: sequencer
    spec:
      serviceAccountName: my-release-canton-domain-sequencer
      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: Always
        sysctls: []
      containers:
        - name: canton
          image: "digitalasset-docker.jfrog.io/canton-enterprise:2.8.1"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            readOnlyRootFilesystem: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
          args:
            - "daemon"
            - "--log-profile=container"
            - "--log-encoder=plain"
            - "--log-level-root=INFO"
            - "--log-level-canton=INFO"
            - "--log-level-stdout=INFO"
            - "--config=/etc/canton/sequencer.conf"
          ports:
            - name: public
              containerPort: 4401
            - name: admin
              containerPort: 4402
          resources:
            limits:
              cpu: 2
              memory: 3Gi
            requests:
              cpu: 500m
          livenessProbe:
            grpc:
              port: 4403
              service: "liveness"
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 3
          readinessProbe:
            grpc:
              port: 4403
              service: ""
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 1
            timeoutSeconds: 3
          volumeMounts:
            - name: config
              mountPath: /etc/canton
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: my-release-canton-domain-sequencer
